Update to java 21